--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.8",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "axios-jsonp": "^1.0.4",
     "firebase": "^9.10.0",
+    "firebase-tools": "^11.13.0",
     "import": "^0.0.6",
     "react": "^18.2.0",
+    "react-animated-heart": "^0.0.7",
     "react-dom": "^18.2.0",
+    "react-heart": "^1.0.6",
     "react-icons": "^4.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
