searchbar bug fixed,download apk and more

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
   "hosting": {
-    "target":"iheardarumor",
-    "public": "./build",
+    "public": "y",
     "ignore": [
       "firebase.json",
       "**/.*",
