fire base target changed

--- a/.firebaserc
+++ b/.firebaserc
@@ -6,7 +6,8 @@
     "ihar-7ab4b": {
       "hosting": {
         "iheardarumor": [
-          "iheardarumor"
+          "iheardarumor",
+          "iheardarumor.web.app"
         ]
       }
     }
