hosting big fixed

--- a/.firebaserc
+++ b/.firebaserc
@@ -6,8 +6,7 @@
     "ihar-7ab4b": {
       "hosting": {
         "iheardarumor": [
-          "iheardarumor",
-          "iheardarumor.web.app"
+          "iheardarumor"
         ]
       }
     }
