--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
+    "public": "build",
     "target":"iheardarumor",
-    "public": "y",
     "ignore": [
       "firebase.json",
       "**/.*",
